--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #A27B5C;
+}
 /*Header*/
 h1 {
     text-align: center;
@@ -6,18 +12,59 @@ h1 {
     font-size: 2.5em;
     margin-top: 0;
     padding-top: 20px;
+    background-color:#A27B5C;
+    color: #2C3930;
 }
 
 .main{
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f1f1f1;
+    align-items: center;;
+    background-color: #A27B5C;
     flex-direction: row;
+    height: 80vh;
 }
 canvas {
-    border: 2px solid #333;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 5px solid #DCD7C9;
+    background-color: #A27B5C;
+}
+.words{
+    display: flex;
+    align-items: center;
+    height: 80vh;
+    background-color: #A27B5C;
+    flex-direction: column;
+    color: #2C3930;
+    justify-content: space-evenly;
+}
+h3{
+    font-size: 2em;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.timer{
+    font-size: 2em;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    box-shadow: 0 0 10px 0 #DCD7C9;
+}
+.words hr{
+    width: 75%;
+    margin: 0;
+    padding: 0;
+    color:#DCD7C9;
+}
+.words h2{
+    font-size: 2em;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.words p{
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
